--- a/.env
+++ b/.env
@@ -3,18 +3,18 @@ NODE_ENV=production
 PORT=3001
 
 # Database Configuration
-DB_HOST=localhost
-DB_USER=ajaco_timesheet
-DB_PASSWORD=IyhpJL4+%Vl2P+k2
-DB_NAME=ajaco_timesheet
-DB_PORT=3306
+# DB_HOST=localhost
+# DB_USER=ajaco_timesheet
+# DB_PASSWORD=IyhpJL4+%Vl2P+k2
+# DB_NAME=ajaco_timesheet
+# DB_PORT=3306
 
 # Database Configuration
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=
-# DB_NAME=aja_timesheet
-# DB_PORT=3306
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=aja_timesheet
+DB_PORT=3306
 
 # Email Configuration
 EMAIL_HOST=mail.khumo.co.bw
